--- a/index.ipynb
+++ b/index.ipynb
@@ -8,20 +8,11 @@
     }
    },
    "source": [
-    "# This is a Slide!\n",
+    "# SunPy: Python for Solar Physics\n",
     "\n",
-    "## With a sub heading.\n",
+    "## Stuart Mumford\n",
     "\n",
-    "the `custom.css` file aligns h1 and h2 to the center, but not\n",
-    "\n",
-    "## h3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some stuff in the slide."
+    "<a href=\"https://aperio.software\"><img style='float: left; width: 30%; margin-top: 100px; height: 25%;' src='images/aperio.svg'/></a><a href=\"https://sheffield.ac.uk\"><img style='float: right; width: 30%; margin-top: 100px; height: 25%;' src='images/TUOS_Logo_CMYK_Keyline.svg'/></a><a href=\"https://sunpy.org\"><img style='float: right; width: 30%; margin-top: 100px; height: 25%; margin-right: 5%;' src='images/sunpy.svg'/></a>\n"
    ]
   },
   {
@@ -32,17 +23,28 @@
     }
    },
    "source": [
-    "# Another slide, with columns!\n",
+    "# Me\n",
     "\n",
     "<div class='left'>\n",
     "\n",
-    "This is on the right!\n",
+    "<p>\n",
+    "    I am the Lead Developer of SunPy. I work for the National Solar Observatory in the DKI Solar Telescope Data Centre.\n",
+    "</p>\n",
+    "<p>\n",
+    "    Find me:\n",
+    "    <ul>\n",
+    "        <li> <a href=\"http://stuartmumford.uk\">stuartmumford.uk</a> </li>\n",
+    "        <li> <a href=\"https://matrix.to/#/@cadair:cadair.com\">@cadair:cadair.com</a> on Matrix </li>\n",
+    "        <li> <a href=\"https://github.com/Cadair\">@Cadair</a> on GitHub</li>\n",
+    "        <li> <a href=\"https://twitter.com/stuartmumford\">@stuartmumford</a> on Twitter </li>\n",
+    "</p>\n",
     "\n",
     "</div>\n",
     "\n",
     "<div class='right'>\n",
     "\n",
-    "This is on the left!\n",
+    "<img style='width: 500px;' src='images/cadair.jpg'/>\n",
+    "\n",
     "\n",
     "</div>\n"
    ]
@@ -55,39 +57,7 @@
     }
    },
    "source": [
-    "# Equations and Stuff!\n",
-    "\n",
-    "<p style=\"text-align: center;\"> This text is at the top.</p>\n",
-    "\n",
-    "<div class='left' style=\"border-right: solid\">\n",
-    "\n",
-    "These are some equations:\n",
-    "\n",
-    "$F \\approx 3 \\times 10^7$ ergs s<sup>-1</sup> cm <sup>-2</sup>,\n",
-    "\n",
-    "<br/>\n",
-    "\n",
-    "$F_{AR} \\approx 10^3 - 10^4$ ergs s<sup>-1</sup> cm <sup>-2</sup>,\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "<div class='right'>\n",
-    "\n",
-    "$\\rho_0 = 23.6 m_p N_e$\n",
-    "\n",
-    "<br/>\n",
-    "\n",
-    "LOOK Numbers!\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "<div style=\"clear: both;\"></div>\n",
-    "\n",
-    "\n",
-    "## Markdown!\n",
-    "\n",
-    "\n",
-    "Gone back to plain markdown now, you can't have markdown in html block elements (live div's).\n"
+    "<img style=\"margin-top: -300px;\" src='images/fulldiskmulticolor.jpg'/>"
    ]
   },
   {
@@ -139,9 +109,9 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Environment (virtualenv_sunpy-release)",
    "language": "python",
-   "name": "python3"
+   "name": "virtualenv_sunpy-release"
   },
   "language_info": {
    "codemirror_mode": {
@@ -153,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
